# hope

./: .env.example  .env.test  .gitignore  AGENTS.md  AUDIT_REPORT.md  Cargo.toml  GEMINI.md  Makefile  ROADMAP.md  consolidate_project_sources.py  consolidated_audit.txt  model.onnx (1).data  model.onnx.data  model.onnx.sig  requirements.txt  restore_nb.py
.claude/hooks/: session-start.sh
.github/: copilot-instructions.md
data/: ticks.csv
docs/: README.md  architecture.md  blueprint.md  project_structure.md  roadmap.md  runbook.md
docs/adr/: 0001-websocket-first-event-driven-engine.md  0002-strict-fsm-for-trade-lifecycle.md  0003-deterministic-model-system-separation.md  0004-nonblocking-tick-audit-logging.md  0005-stay-on-legacy-deriv-websocket-api-until-explicitly-replaced.md  0006-gaussian-probability-model.md  0007-neural-inference-integration.md  0008-ml-training-pipeline-optimizations.md  0009-advanced-ml-training-and-strategy-enhancements.md  0010-gated-tcn-architecture.md  0010-structured-logging-and-environment-aware-training.md  0011-gated-tcn-architecture.md  0012-noise-resilient-training.md  0013-high-fidelity-backtesting.md  0014-cloud-only-training-enforcement.md  0015-professional-grade-data-engineering-infrastructure.md  0016-reliability-and-performance-hardening.md  0017-canonical-transformer-ts2vec.md  0018-persistent-engine-state-and-buffered-ingestion.md  0019-numerical-integrity-and-math-parity-hardening.md  0020-fix-fsm-recovery-stall-on-reconnect.md  README.md
docs/reference/: README.md  deriv-api.md
new_venv/: pyvenv.cfg
notebooks/: colab_training.ipynb  kaggle_training.ipynb  train_transformer.ipynb
scripts/: GEMINI.md  export_db.py  export_to_onnx.py  grid_backtest.py  migrate_db.py  sign_model.py  test_export.py  tick_collector.py  train.py  train_fixed.py
scripts/hope_ml/: __init__.py  common.py
src/: config.rs  engine.rs  engine.rs_FIX_NEW  execution.rs  fsm.rs  lib.rs  main.rs  risk.rs  strategy.rs  tick_logger.rs  tick_processor.rs  transformer.rs  websocket_client.rs  websocket_client.rs_FIX
test_venv/: pyvenv.cfg
tests/: test_consolidate_project_sources.py  test_hope_ml_common.py  test_tick_collector.py  verification.rs
tests/fixtures/: test_export.py
