[package]
name = "hope"
version = "0.1.0"
edition = "2021"
default-run = "hope"

[dependencies]
anyhow = "1"
futures-util = { version = "0.3", default-features = false, features = ["sink", "std"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
statrs = "0.18.0"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "sync", "time"] }
tokio-tungstenite = { version = "0.21", features = ["rustls-tls-native-roots"] }
tract-onnx = "0.21"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
url = "2"

[dev-dependencies]
serial_test = "1"

[profile.release]
lto = "thin"
codegen-units = 1
opt-level = 3
