[package]
name = "hope"
version = "0.1.0"
edition = "2021"
default-run = "hope"

[dependencies]
anyhow = "1"
futures-util = { version = "0.3", default-features = false, features = ["sink", "std"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
statrs = "0.18.0"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "sync", "time"] }
tokio-tungstenite = { version = "0.28", features = ["rustls-tls-native-roots"] }
hex = "0.4"
tract-onnx = "0.21"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
url = "2"
secrecy = { version = "0.8", features = ["serde"] }
ed25519-dalek = "2.1"
parking_lot = "0.12"
once_cell = "1"
crossbeam-channel = "0.5.15"
arc-swap = "1.9.1"
crossbeam-queue = "0.3.12"
crossbeam-utils = "0.8.21"

[dev-dependencies]
serial_test = "1"

[profile.release]
lto = "thin"
codegen-units = 1
opt-level = 3
